# SheetMaster

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
include/piano_assist/: floating_overlay_window.hpp  keyboard.hpp  main_window.hpp  settings_store.hpp  song_parser.hpp  song_repository.hpp  tag_store.hpp  types.hpp
resources/: app.qrc
scripts/: package-portable.ps1
sheets/: Beautiful in White.PADATA  Blue.PADATA  Canon in D Major.PADATA  Fur Elise.PADATA  Glue Song.PADATA  I see the light (1).PADATA  I see the light.PADATA  Kahit Maputi na ang Buhok Ko.PADATA  Kiss the Rain.PADATA  Let it Go.PADATA  Line Without a Hook.PADATA  Love Story.PADATA  Magbalik.PADATA  Moonlight Sonata.PADATA  Renai Circulation.PADATA  Rewrite the Stars.PADATA  River Flows in You.PADATA  Rondo Alla Turca.PADATA  Sparkle.PADATA  The Scientist.PADATA  Thousand Years.PADATA  Unravel.PADATA  Virus.PADATA  Vivaldi Summer.PADATA  cant_help_falling_in_lov_09b9ee24d2bb0e98.PADATA  howls_moving_castle_unfi_28d2eb934af79944.PADATA  love_72fa35c909d15a49.PADATA  multo_2d2f28b446305497.PADATA
src/: floating_overlay_window.cpp  keyboard.cpp  main.cpp  main_window.cpp  settings_store.cpp  song_parser.cpp  song_repository.cpp  tag_store.cpp
tests/: core_tests.cpp
